Fixes bullet alignment

--- a/themes/css/map/cartodb-map-light.css
+++ b/themes/css/map/cartodb-map-light.css
@@ -190,14 +190,18 @@
   div.cartodb-legend.custom ul li,
   div.cartodb-legend.color ul li {
     position:relative;
-    margin: 0 0 5px 0;
+    margin: 0 0 7px 0;
     font-size: 10px;
     color: #666666;
     font-weight:bold;
     font-family: "Helvetica", Arial;
     text-transform: uppercase;
-    line-height: normal;
     text-align: left;
+    line-height: normal;
+    height: 10px;
+    line-height: 10px;
+    vertical-align:middle;
+
   }
 
   div.cartodb-legend.custom ul li:last-child,
@@ -205,11 +209,11 @@
 
   div.cartodb-legend.custom ul li .bullet,
   div.cartodb-legend.color ul li .bullet {
-    position:relative;
-    top: 2px;
     float:left;
     margin: 0 5px 0 0;
-    width: 3px; height: 3px;
+    width: 3px; 
+    height: 3px;
+
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
